--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,16 +6,16 @@ numpy==1.24.3
 pandas==2.0.3
 scikit-learn==1.3.0
 transformers==4.33.2
-chromadb==0.4.8
-qdrant-client==1.5.4
 python-dotenv==1.0.0
 sqlalchemy==2.0.21
 alembic==1.12.0
 pytest==7.4.2
 black==23.7.0
 flake8==6.0.0
+psutil==5.9.5
 pymongo==4.6.0
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
-numpy==1.24.3
-scikit-learn==1.3.0
+torch==2.0.1
+torchvision==0.15.2
+huggingface_hub==0.23.0
